# AnkiMarker

./: .gitignore  .ignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  tests.py  todo.md  todo.txt
.github/workflows/: release.yml
addon/: __init__.py  manifest.json  meta.json
addon/assets/: main.css
addon/src/: addon.py  config.py  helpers.py  marker.py  processor.py  style.py
addon/src/assets/: main.css
addon/user_files/: markers.css  markers.json
addon/user_files__dev/: markers.json
addon/user_files_dev/: markers.css  markers.json
anki-marker/: __init__.py  config.md  main.css  marker.py
anki-marker/src/: __init__.py  marker.py
anki-marker/user_files/: markers.json  user.css
ankimarker/: __init__.py  config.json  config.md  main.css  meta.json
ankimarker/src/: __init__.py  addon.py  marker.py
ankimarker/user_files/: markers.css  markers.json
bundle/: anki-marker.ankiaddon
scripts/: bundle.sh  link.sh  precommit.sh  unlink.sh
tests/: conftest.py  test.html  test_addon.py  test_config.py  test_marker.py
